--- a/index.html
+++ b/index.html
@@ -75,56 +75,56 @@
         <div class="box1 box">
             <div class="box-content">
             <h2>Clothes</h2>
-            <div class="box-img" style="background-image:url('box1_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box1_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
             <h2>Care Corner</h2>
-            <div class="box-img" style="background-image:url('box2_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box2_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
             <h2>Living Essentials</h2>
-            <div class="box-img" style="background-image:url('box3_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box3_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
             <h2>Electrohub</h2>
-            <div class="box-img" style="background-image:url('box4_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box4_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
          <div class="box5 box">
             <div class="box-content">
             <h2>Glam Zone</h2>
-            <div class="box-img" style="background-image:url('box5_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box5_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box6 box">
             <div class="box-content">
             <h2>Paw Care</h2>
-            <div class="box-img" style="background-image:url('box6_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box6_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box7 box">
             <div class="box-content">
             <h2>Kiddie Kingdom </h2>
-            <div class="box-img" style="background-image:url('box7_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box7_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box8 box">
             <div class="box-content">
             <h2>Fashion Finds</h2>
-            <div class="box-img" style="background-image:url('box8_image.jpg') ;"></div>
+            <div class="box-img" style="background-image:url('images/box8_image.jpg') ;"></div>
             <p>See more</p>
             </div>
         </div>
